# pgrss

./: .gitignore  bb.edn  main.py  pyproject.toml
.github/workflows/: refresh_rss.yml
data/: 13sentences.html.json  5founders.html.json  6631327.html.json  95.html.json  ace.html.json  addiction.html.json  airbnb.html.json  airbnbs.html.json  alien.html.json  altair.html.json  ambitious.html.json  america.html.json  angelinvesting.html.json  aord.html.json  apple.html.json  artistsship.html.json  avg.html.json  badeconomy.html.json  before.html.json  best.html.json  better.html.json  bias.html.json  boss.html.json  brandage.html.json  bronze.html.json  bubble.html.json  charisma.html.json  cities.html.json  college.html.json  colleges.html.json  conformism.html.json  control.html.json  convergence.html.json  convince.html.json  copy.html.json  corpdev.html.json  cred.html.json  credentials.html.json  desres.html.json  determination.html.json  (+188 more)
docs/: rss-2004-11.atom  rss-2004-11.xml  rss-2006-07.atom  rss-2006-07.xml  rss-2006-08.atom  rss-2006-08.xml  rss-2008-05.atom  rss-2008-05.xml  rss-2008-07.atom  rss-2008-07.xml  rss-2010-07.atom  rss-2010-07.xml  rss-2013-09.atom  rss-2013-09.xml  rss-2014-10.atom  rss-2014-10.xml  rss-2020-01.atom  rss-2020-01.xml  rss-2022-11.atom  rss-2022-11.xml  rss.atom  rss.xml
