[project]
name = "pgrss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedgen>=1.0.0",
    "feedgenerator>=2.1.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "ruff>=0.11.11",
]
